--- a/index.html
+++ b/index.html
@@ -7,7 +7,16 @@
 </head>
 <body>
   <h1>DevOps Quiz</h1>
-
+  <select id="topicSelect">
+    <option value="">Select Topic</option>
+  </select>
+  
+  <div id="quiz">
+    <h2 id="question"></h2>
+    <ul id="options"></ul>
+    <p id="feedback"></p>
+  </div>
+  
   <script src="app.js"></script>
 </body>
 </html>
